Fixed footer button ontent being off-center

--- a/quasar-project/src/css/app.scss
+++ b/quasar-project/src/css/app.scss
@@ -1,1 +1,5 @@
 // app global css in SCSS form
+.q-btn-group button {
+  align-items: center;
+  justify-content: center;
+}
